fix(config): prevent AuthService crash by adding missing TokenValidityMins

--- a/API/example.appsettings.json
+++ b/API/example.appsettings.json
@@ -12,7 +12,8 @@
   "JwtSettings": {
     "Issuer": "JwtIssuer",
     "Audience": "JwtAudience",
-    "Key": "Super-secret-giant-password-here"
+    "Key": "Super-secret-giant-password-here",
+    "TokenValidityMins": 10
   },
   "EmailSettings": {
     "email": "youremail@mail.com",
