feat(auth): implement refresh token flow with secure cookie and token revocation
- Implemented refresh token mechanism using GUID-based tokens
- Stored refresh tokens in the database with expiry and revocation logic
- Set refresh token in HTTP-only, secure cookies
- Added logout endpoint to revoke refresh token in the database and remove cookie
- Ensured all user refresh tokens are deleted on password change for security

--- a/API/example.appsettings.json
+++ b/API/example.appsettings.json
@@ -13,7 +13,8 @@
     "Issuer": "JwtIssuer",
     "Audience": "JwtAudience",
     "Key": "Super-secret-giant-password-here",
-    "TokenValidityMins": 10
+    "TokenValidityMins": 15,
+    "RefreshTokenValidityDays": 7
   },
   "EmailSettings": {
     "email": "youremail@mail.com",
