refactor(auth): enhance password reset security and implementation
- Moves business logic and validation from UserController to UserService.
- Simplifies the password reset flow to use only two endpoints, removing the need for a separate token verification step.
- Improves security by using a cryptographically-secure token and locating users by token instead of email.
- Tokens are now time-limited and invalidated immediately after use.

--- a/API/example.appsettings.json
+++ b/API/example.appsettings.json
@@ -21,5 +21,8 @@
     "smtpPassword": "YourEmailPasswordOrAppPassword",
     "smtpServer": "smtp.mail.com",
     "smtpPort": 587
+  },
+  "ClientSettings": {
+    "WebAppUrl": "https://localhost:4200"
   }
 }
