feat(security): implement transparent encryption for task data
- Adds automatic, transparent encryption for the `Title` and `Description` properties of the `ToDoTask` model.
- Using EF Core `ValueConverter` to handle the encryption/decryption process seamlessly when interacting with the database.

--- a/API/example.appsettings.json
+++ b/API/example.appsettings.json
@@ -16,6 +16,9 @@
     "TokenValidityMins": 15,
     "RefreshTokenValidityDays": 7
   },
+  {
+    "Encryption:SecretKey": "Your32CharacterSecretKey"
+  },
   "EmailSettings": {
     "email": "youremail@mail.com",
     "smtpPassword": "YourEmailPasswordOrAppPassword",
